// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render alert with type 1`] = `
<div
  class="nimbus-alert-desc"
>
  info
</div>
`;

exports[`<Alert /> should render alert with type 2`] = `
<div
  class="nimbus-alert-desc"
>
  warning
</div>
`;

exports[`<Alert /> should render alert with type 3`] = `
<div
  class="nimbus-alert-desc"
>
  success
</div>
`;

exports[`<Alert /> should render alert with type 4`] = `
<div
  class="nimbus-alert-desc"
>
  error
</div>
`;

exports[`<Alert /> should render default 1`] = `
<div>
  <div
    class="nimbus-alert"
    style="border-left-color: #3A7BF7;"
  >
    <div
      class="nimbus-alert-content"
    >
      <div
        class="nimbus-alert-desc"
      >
        default
      </div>
    </div>
  </div>
</div>
`;
